a modest attempt to make code a bit more readable by using java 1.5
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22196 91430c5f-d668-0410-9e7d-dd663366dcfd